# my-own-rpc

./: .gitignore  CMakeLists.txt  README.md
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  CmakeLists.txt  user_service.cc
src/: CMakeLists.txt  rpcapplication.cc  rpcconfig.cc  rpcprovider.cc
src/include/: rpcapplication.h  rpcconfig.h  rpcprovider.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
